# forge

./: .gitattributes  .gitignore  .gitmodules  404.html  Cargo.toml  LICENSE.txt  README.md  TODO.md  example.frg  index.html  language.md  requirements.txt  sitemap.xml
forge-compiler/: .clang-format  .clang-format-include  .clang-tidy  Doxyfile  README.md  build_configuration.h.in  forge.supp  meson.build  meson.options
forge-compiler/docs/: README.md
forge-compiler/docs/for-developers/: README.md
forge-compiler/docs/for-developers/architecture/: README.md
forge-compiler/docs/for-developers/guides/: enum-conventions.md  generating-valgrind-suppression-files.md  naming-convention.md  writing-message-codes.md
forge-compiler/docs/for-developers/planning/: 2024-03-30-speeding-up-development.md  README.md
forge-compiler/include/forge/: assert.h  ast.h  color.h  debug.h  enums.h  exec.h  lex.h  list.h  log.h  memory.h  parse.h  spawn.h  str.h  stream.h  types.h
forge-compiler/include/forge-testing/: enums.h  string_comparison.h
forge-compiler/include/forge-testing/compilation_test/: test.h  utilities.h
forge-compiler/include/forge/ast/: ast.h  comparers.h  debug.h  debug_printers.h  destructors.h  print_debug.h  scope.h  visitor.h  visitor_acceptors.h
forge-compiler/include/forge/cli/: choice.h  option.h  program_forward.h
forge-compiler/include/forge/codegen/: codegen.h
forge-compiler/include/forge/common/: color.h  debug.h  enums.h  lexical_casts.h  log.h  memory.h  str_escape.h  stream.h  types.h
forge-compiler/include/forge/configuration/: cli_program.h  options.h
forge-compiler/include/forge/exec/: exec.h
forge-compiler/include/forge/lexical_casts/: string.h  uint.h  utilities.h
forge-compiler/include/forge/linking/: configuration.h  link.h
forge-compiler/include/forge/messages/: message.h
forge-compiler/include/forge/parse/: parse.h
forge-compiler/include/forge/parsing/: domain.h  source.h  source_context.h
forge-compiler/include/forge/streams/: output.h
forge-compiler/include/forge/verification/: type_operations.h  verifier.h
forge-compiler/lib/forge/: ast.c  ast_test.c  color.c  color_demo.c  color_test.c  debug.c  debug_demo.c  enum_printing.c  enum_printing_test.c  enums.c  exec.c  forge.l  forge.y  list.c  log.c  log_demo.c  memory.c  memory_test.c  parse.c  spawn.c  stream.c  stream_test.c  types.c
forge-compiler/lib/forge-testing/: string_comparison.c  string_comparison_test.c  string_substitution.c  string_substitution_test.c
forge-compiler/lib/forge-testing/compilation_test/: test.c
forge-compiler/lib/forge/ast/: ast.c  ast_test.c  cloners.c  comparers_test.c  debug.c  debug_printers.c  declaration_name_getters.c  destructors.c  node.c  node_kind_info.c  visitor_test.c
forge-compiler/lib/forge/cli/: choice.c  command.c  option_set.c  option_set_demo.c  option_test.c  program_demo.c
forge-compiler/lib/forge/codegen/: generators.hpp
forge-compiler/lib/forge/common/: color.c  color_demo.c  color_test.c  debug.c  debug_demo.c  enums.c  lexical_casts.c  lexical_casts_test.c  log.c  log_demo.c  memory.c  memory_test.c  str_escape.c  stream.c  stream_test.c
forge-compiler/lib/forge/exec/: exec.c
forge-compiler/lib/forge/lexical_casts/: character.c  float.c  string.c  string_test.c  uint.c  utilities.c
forge-compiler/lib/forge/messages/: message.c  message_test.c
forge-compiler/lib/forge/parse/: forge.l  forge.y  parse.c
forge-compiler/lib/forge/parsing/: domain.c  forge.l  forge.y  parse.c  parse_test.c  source.c  source_test.c  token_reader.c
forge-compiler/lib/forge/streams/: color_demo.c  input.c  output_test.c  unicode_demo.c
forge-compiler/scripts/: common.py  lint.py  test_wrapper_fast.py  test_wrapper_full.py
forge-compiler/src/forge-compiler/: main.c
forge-compiler/tests/: nodes.c
forge-compiler/tests/compilation/: bit_and.c  bit_not.c  bit_or.c  bit_shift_left.c  bit_shift_right.c  bit_xor.c  empty.c  function_return_type.c  literals_bool.c  literals_int.c  logical_and.c  logical_not.c  logical_or.c
forge-core/: .clang-format-include  README.md  build_config.h.in  build_configuration.h.in  forge.supp  meson.build  meson.options
forge-core/docs/: README.md
forge-core/docs/for-developers/: README.md
forge-core/docs/for-developers/architecture/: README.md  compiler-flow.md
forge-core/docs/for-developers/guides/: README.md  changing-language-features.md  enum-conventions.md  generating-valgrind-suppression-files.md  naming-convention.md  struct-conventions.md  writing-message-codes.md
forge-core/docs/for-developers/planning/: 2024-01-05-improving-testing.md  2024-01-09-error-formatting-demo.sh  2024-01-09-error-formatting.md  2024-01-27-better-developer-experience.md  README.md
forge-core/include/forge/: assert.h  debug.h  die.h  enum_printing.h  enums.h  lexical_casts.h  log.h  math.h  memory.h  spawn.h  types.h
forge-core/include/forge-testing/: enums.h  string_comparison.h  string_substitution.h
forge-core/include/forge-testing/compilation_test/: options.h  test.h  utilities.h
forge-core/include/forge/ast/: ast.h  cloners.h  comparers.h  debug.h  (+14 more)
forge-core/lib/forge/: debug.c  debug_demo.c  enum_printing.c  enum_printing_test.c  enums.c  enums_test.c  lexical_casts.c  lexical_casts_test.c  log.c  math.c  math_test.c  memory.c  memory_test.c  spawn.c  types.c
forge-core/lib/forge-testing/: string_comparison.c  string_comparison_demo.c  string_comparison_test.c  string_substitution.c  string_substitution_test.c
forge-core/scripts/: check_subprojects.py  doxygen.py  test_wrapper_common.py  test_wrapper_fast.bash  test_wrapper_full.bash
forge-core/src/forge/: main.c
forge-core/src/forge-compiler/: main.c
forge-core/subprojects/: README.md
forge-core/tests/: nodes.c
forge-core/tests/compilation/: bit_and.c  bit_not.c  bit_or.c  bit_shift_left.c  bit_shift_right.c  bit_xor.c  empty.c  function_return_type.c  literals_bool.c  literals_float.c  literals_int.c  logical_and.c  logical_not.c  logical_or.c  negate_int.c  test.c  test.h
forge-core/tests/parsing/: basic.c
(+1142 files in other folders)
